# parallel-computing-tutorial

./: .gitignore  CMakeLists.txt  README.md
include/: cuda_gemm_utils.cuh  matmul.h
src/: 00_non_coalesced_global_memory_access.cu  01_coalesced_global_memory_access.cu  02_2d_block_tiling.cu  kernel_global_mem_coalesce.cu  loop_reordering.cpp  loop_tiling.cpp  main.cpp  matrixMul.cu  matrixMul_SIMD.cpp  matrixMul_coalescing.cu  matrixMul_non_coalesced.cu  matrixMul_share.cu  mm  mm.cu  navie_mat_mul.cpp  transpose.cu
